grammar.js
    source_file: $ => choice($.expressions, $.where_clause),

    // Tokens
    comment: _ =>
      token(
        choice(
          seq("--", /.*/),
          seq("/*", /.*/, repeat(seq("\n", /.*/)), "*/"),
          seq("#", /.*/),
          seq("//", /.*/),
          seq("-------- Query", /.*/),
          seq("-------- Result", /.*/),
        ),
      ),
    semi_colon: _ => token(";"),
    keyword_if: _ => make_keyword("IF"),
    keyword_let: _ => make_keyword("LET"),
    keyword_else: _ => make_keyword("ELSE"),
    keyword_begin: _ => make_keyword("BEGIN"),
    keyword_commit: _ => make_keyword("COMMIT"),
    keyword_transaction: _ => make_keyword("TRANSACTION"),
    keyword_in: _ => make_keyword("IN"),
    keyword_content: _ => make_keyword("CONTENT"),
    keyword_create: _ => make_keyword("CREATE"),
    keyword_update: _ => make_keyword("UPDATE"),
    keyword_for: _ => make_keyword("FOR"),
    keyword_set: _ => make_keyword("SET"),
    keyword_break: _ => make_keyword("BREAK"),
    expressions: $ =>
      seq(
        $.expression,
        repeat(seq($.semi_colon, $.expression)),
        optional($.semi_colon),
      ),

    expression: $ => choice($.primary_statement, $.subquery_statement, $.value),

    // Statements

    // Top level statements
    primary_statement: $ =>
      choice(
        $.live_select_statement,
        $.begin_statement,
        $.cancel_statement,
        $.commit_statement,
        $.use_statement,
        $.info_statement,
        $.throw_statement,
        $.break_statement,
        $.continue_statement,
        $.sleep_statement,
        $.kill_statement,
      ),

    // Statements that can be stand alone or nested
    subquery_statement: $ =>
      choice(
        $.select_statement,
        $.if_statement,
        $.let_statement,
        $.alter_statement,
        $.delete_statement,
        $.create_statement,
        $.update_statement,
        $.remove_statement,
        $.return_statement,
        $.insert_statement,
        $.relate_statement,
        $.for_statement,
        $.define_analyzer_statement,
        $.define_database,
        $.define_event_statement,
        $.define_field_statement,
        $.define_function_statement,
        $.define_index_statement,
        $.define_namespace_statement,
        $.define_param_statement,
        $.define_scope_statement,
        $.define_table_statement,
        $.define_token_statement,
        $.define_user_statement,
      ),

    break_statement: $ => seq($.keyword_break, $.semi_colon),

    for_statement: $ =>
      seq(
        $.keyword_for,
        $.variable_name,
        $.keyword_in,
        $.value,
        $.block
      ),

    if_statement: $ => seq(
      $.keyword_if,
      $.value,
      $.block,
      repeat($.else_if_clause),
      optional($.else_clause),
    ),

    else_if_clause: $ => seq(
      $.keyword_else,
      $.keyword_if,
      $.value,
      $.block
    ),

    let_statement: $ => seq($.keyword_let, $.variable_name, "=", choice($.value, $.subquery_statement)),

    begin_statement: $ => seq($.keyword_begin, optional($.keyword_transaction)),

    commit_statement: $ =>
      seq($.keyword_commit, optional($.keyword_transaction)),

    create_statement: $ =>
      seq(
        $.keyword_create,
        optional($.keyword_only),
        $.create_target,
        optional(choice($.content_clause, $.set_clause)),
        optional($.return_clause),
        optional($.timeout_clause),
      ),

    update_statement: $ =>
      seq(
        $.keyword_update,
        optional($.keyword_only),
        choice(
          $.primary_statement,
          seq(
            commaSeparated($.value),
            optional(
              choice(
                $.content_clause,
                $.merge_clause,
                $.patch_clause,
                $.set_clause,
                $.unset_clause,
              ),
            ),
            optional($.where_clause),
            optional($.return_clause),
            optional($.timeout_clause),
            optional($.parallel_clause),
          ),
        ),
      ),

    block: $ => seq("{", optional($.expressions), "}"),

    create_target: $ =>
      choice(commaSeparated($.identifier), $.variable_name, $.function_call, $.record_id, $.multi_record),

    content_clause: $ => seq($.keyword_content, choice($.object, $.variable_name)),

    set_clause: $ => seq($.keyword_set, commaSeparated($.field_assignment)),

    field_assignment: $ => seq($.identifier, $.assignment_operator, $.value),

    // Value-related rules
    value: $ =>
      choice($.base_value, $.cast_expression, $.binary_expression, $.path, $.function_call, $.negated_expression),

    function_call: $ =>
      choice(
        seq($.keyword_count, $.argument_list_count),
        seq(
          choice($.function_name, $.custom_function_name, $.keyword_rand, seq($.identifier, repeat1(seq('::', $.identifier)))),
          optional($.version),
          $.argument_list,
        ),
      ),

    base_value: $ =>
      choice(
        $.string,
        $.prefixed_string,
        $.number,
        $.keyword_true,
        $.keyword_false,
        $.keyword_none,
        $.keyword_null,
        $.variable_name,
        $.identifier,
        $.array,
        $.record_id,
        $.sub_query,
        $.object,
        $.duration,
        $.point,
      ),

    cast_expression: $ => prec.left(seq("<", $.type_name, ">", $.value)),

    binary_expression: $ => prec.left(seq($.value, $.operator, $.value)),

    argument_list: $ => seq("(", optional(commaSeparated($.value)), ")"),

    type_name: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    string: _ => /'[^'\\]*(?:\\.[^'\\]*)*'|"[^"\\]*(?:\\.[^"\\]*)*"/,
    number: $ => choice($.int, $.float, $.decimal),
    int: _ => /-?[0-9]+/,
    float: _ => /-?[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?f?/,
    variable_name: _ => /\$[a-zA-Z_][a-zA-Z0-9_]*/,
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    function_name: _ => /[a-zA-Z_][a-zA-Z0-9_]*(::[a-zA-Z_][a-zA-Z0-9_]*)*/,
    array: $ => seq("[", optional(commaSeparated($.value)), "]"),
    object: $ => seq("{", optional($.object_content), "}"),
    object_content: $ => commaSeparated($.object_property),
    object_property: $ => seq(choice($.object_key, $.string), ":", $.value),
    object_key: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    record_id: $ =>
      prec.left(
        seq($.object_key, ":", choice($.record_id_value, $.record_id_range)),
      ),
    record_id_value: $ => choice($.record_id_ident, $.int, $.array, $.object),
    record_id_ident: _ => /[a-zA-Z0-9_]+/,
    operator: $ =>
      choice(
        $.binary_operator,
        "-",
        "=",
        ">",
        "<",
        "%",
        $.keyword_and,
        $.keyword_or,
        $.keyword_is,
        seq($.keyword_is, $.keyword_not),
        $.keyword_contains,
        $.keyword_contains_not,
        $.keyword_contains_all,
        $.keyword_contains_any,
        $.keyword_contains_none,
        $.keyword_inside,
        $.keyword_in,
        $.keyword_not_inside,
        seq($.keyword_not, $.keyword_in),
        $.keyword_all_inside,
        $.keyword_any_inside,
        $.keyword_none_inside,
        $.keyword_outside,
        $.keyword_intersects,
        seq("@", $.int, "@"),
        seq(
          "<|",
          $.int,
          optional(
            seq(
              ",",
              choice(
                $.int,
                $.keyword_chebyshev,
                $.keyword_cosine,
                $.keyword_euclidean,
                $.keyword_hamming,
                $.keyword_jaccard,
                $.keyword_manhattan,
                seq($.keyword_minkowski, $.number),
                $.keyword_pearson,
              ),
            ),
          ),
          "|>",
        ),
      ),

    binary_operator: _ =>
      choice(
        "&&",
        "||",
        "??",
        "?:",
        "!=",
        "==",
        "?=",
        "*=",
        "~",
        "!~",
        "*~",
        "<=",
        ">=",
        "+",
        "+=",
        "-=",
        "*",
        "×",
        "/",
        "÷",
        "**",
        ...["∋", "∌", "⊇", "⊃", "⊅", "∈", "∉", "⊆", "⊂", "⊄"],
        "@@",
      ),

    assignment_operator: _ => choice("=", "+=", "-="),
  },
});

function commaSeparated(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function orSeparated(rule) {
  return seq(rule, repeat(seq("|", rule)));
}


function make_keyword(word) {
  return new RegExp([...word].map(c => `[${c.toLowerCase()}${c.toUpperCase()}]`).join(''));
}
