test/corpus/commit.txt
=====================================
Commit a transaction
=====================================

BEGIN TRANSACTION;

-- Setup accounts
CREATE account:one SET balance = 135605.16;
CREATE account:two SET balance = 91031.31;

-- Move money
UPDATE account:one SET balance += 300.00;
UPDATE account:two SET balance -= 300.00;

-- Finalise all changes
COMMIT TRANSACTION;

---

(source_file
  (expressions
    (expression
      (primary_statement
        (begin_statement
          (keyword_begin)
          (keyword_transaction))))
    (semi_colon)
    (comment)
    (expression
      (subquery_statement
        (create_statement
          (keyword_create)
          (create_target
            (value
              (base_value
                (record_id
                  (object_key)
                  (record_id_value
                    (record_id_ident))))))
          (set_clause
            (keyword_set)
            (field_assignment
              (identifier)
              (assignment_operator)
              (value
                (base_value
                  (number
                    (float)))))))))
    (semi_colon)
    (expression
      (subquery_statement
        (create_statement
          (keyword_create)
          (create_target
            (value
              (base_value
                (record_id
                  (object_key)
                  (record_id_value
                    (record_id_ident))))))
          (set_clause
            (keyword_set)
            (field_assignment
              (identifier)
              (assignment_operator)
              (value
                (base_value
                  (number
                    (float)))))))))
    (semi_colon)
    (comment)
    (expression
      (subquery_statement
        (update_statement
          (keyword_update)
          (value
            (base_value
              (record_id
                (object_key)
                (record_id_value
                  (record_id_ident)))))
          (set_clause
            (keyword_set)
            (field_assignment
              (identifier)
              (assignment_operator)
              (value
                (base_value
                  (number
                    (float)))))))))
    (semi_colon)
    (expression
      (subquery_statement
        (update_statement
          (keyword_update)
          (value
            (base_value
              (record_id
                (object_key)
                (record_id_value
                  (record_id_ident)))))
          (set_clause
            (keyword_set)
            (field_assignment
              (identifier)
              (assignment_operator)
              (value
                (base_value
                  (number
                    (float)))))))))
    (semi_colon)
    (comment)
    (expression
      (primary_statement
        (commit_statement
          (keyword_commit)
          (keyword_transaction))))
    (semi_colon)))
